--- a/charts/vault-runtime/templates/10-secrets-platform.yaml
+++ b/charts/vault-runtime/templates/10-secrets-platform.yaml
@@ -40,6 +40,11 @@ spec:
     overwrite: true
     name: {{ $quay.destinationName }}
     type: {{ $quay.type | default "Opaque" }}
+{{- if $quay.destinationAnnotations }}
+    metadata:
+      annotations:
+{{ toYaml $quay.destinationAnnotations | indent 8 }}
+{{- end }}
   vaultAuthRef: k8s
 {{- end }}
 
