fix(vault-runtime): reconcile repo credentials via vault

--- a/charts/vault-runtime/templates/10-secrets-platform.yaml
+++ b/charts/vault-runtime/templates/10-secrets-platform.yaml
@@ -40,10 +40,47 @@ spec:
     overwrite: true
     name: {{ $quay.destinationName }}
     type: {{ $quay.type | default "Opaque" }}
-{{- if $quay.destinationAnnotations }}
+{{- if or $quay.destinationAnnotations $quay.destinationLabels }}
     metadata:
+{{- if $quay.destinationAnnotations }}
       annotations:
 {{ toYaml $quay.destinationAnnotations | indent 8 }}
+{{- end }}
+{{- if $quay.destinationLabels }}
+      labels:
+{{ toYaml $quay.destinationLabels | indent 8 }}
+{{- end }}
+{{- end }}
+  vaultAuthRef: k8s
+{{- end }}
+
+{{- $repo := .Values.secrets.gitRepoCreds -}}
+{{- if $repo.enabled }}
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: {{ $repo.destinationName }}
+  namespace: {{ .Values.namespaces.gitops }}
+spec:
+  mount: gitops
+  type: kv-v2
+  path: {{ $repo.path }}
+  destination:
+    create: true
+    overwrite: true
+    name: {{ $repo.destinationName }}
+    type: {{ $repo.type | default "Opaque" }}
+{{- if or $repo.destinationAnnotations $repo.destinationLabels }}
+    metadata:
+{{- if $repo.destinationAnnotations }}
+      annotations:
+{{ toYaml $repo.destinationAnnotations | indent 8 }}
+{{- end }}
+{{- if $repo.destinationLabels }}
+      labels:
+{{ toYaml $repo.destinationLabels | indent 8 }}
+{{- end }}
 {{- end }}
   vaultAuthRef: k8s
 {{- end }}
