--- a/charts/strfry/templates/statefulset.yaml
+++ b/charts/strfry/templates/statefulset.yaml
@@ -13,7 +13,10 @@ spec:
       labels:
         app: strfry
     spec:
-      securityContext: {}
+      automountServiceAccountToken: false
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: strfry
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -21,13 +24,37 @@ spec:
           ports:
             - name: relay
               containerPort: {{ .Values.service.port }}
+          env:
+            - name: STRFRY_CONFIG
+              value: /opt/strfry/strfry.conf
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
           resources: {{- toYaml .Values.resources | nindent 12 }}
+          readinessProbe:
+            tcpSocket:
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 6
+          livenessProbe:
+            tcpSocket:
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: 15
+            periodSeconds: 20
+            timeoutSeconds: 3
+            failureThreshold: 3
           volumeMounts:
             - name: data
-              mountPath: /var/lib/strfry
+              mountPath: /opt/strfry/strfry-db
             {{- if .Values.config.enabled }}
             - name: config
-              mountPath: /etc/strfry
+              mountPath: /opt/strfry
+              readOnly: true
             {{- end }}
       volumes:
         - name: data
