--- a/charts/strfry/values-local.yaml
+++ b/charts/strfry/values-local.yaml
@@ -12,8 +12,251 @@ persistence:
   size: 10Gi
   storageClassName: ""
 
+config:
+  strfryConf: |
+    ##
+    ## Default strfry config
+    ##
+
+    # Directory that contains the strfry LMDB database (restart required)
+    db = "./strfry-db/"
+
+    dbParams {
+        # Maximum number of threads/processes that can simultaneously have LMDB transactions open (restart required)
+        maxreaders = 512
+
+        # Size of mmap() to use when loading LMDB (default is 10TB, does *not* correspond to disk-space used) (restart required)
+        mapsize = 10995116277760
+
+        # Disables read-ahead when accessing the LMDB mapping. Reduces IO activity when DB size is larger than RAM. (restart required)
+        noReadAhead = true
+    }
+
+    events {
+        # Maximum size of normalised JSON, in bytes
+        maxEventSize = 1048576 # 1 MiB
+
+        # Events newer than this will be rejected
+        rejectEventsNewerThanSeconds = 900
+
+        # Events older than this will be rejected
+        rejectEventsOlderThanSeconds = 3445948650 # 109 years
+
+        # Ephemeral events older than this will be rejected
+        rejectEphemeralEventsOlderThanSeconds = 60 #
+
+        # Ephemeral events will be deleted from the DB when older than this
+        ephemeralEventsLifetimeSeconds = 300 #
+
+        # Maximum number of tags allowed
+        maxNumTags = 2000
+
+        # Maximum size for tag values, in bytes
+        maxTagValSize = 2048
+    }
+
+    relay {
+        # Interface to listen on. Use 0.0.0.0 to listen on all interfaces (restart required)
+        bind = "0.0.0.0"
+
+        # Port to open for the nostr websocket protocol (restart required)
+        port = 7777
+
+        # Set OS-limit on maximum number of open files/sockets (if 0, don't attempt to set) (restart required)
+        nofiles = 0
+
+        # HTTP header that contains the client's real IP, before reverse proxying (ie x-real-ip) (MUST be all lower-case)
+        realIpHeader = "x-forwarded-for"
+
+        info {
+            # NIP-11: Name of this server. Short/descriptive (< 30 characters)
+            name = "bitiq nostr relay"
+
+            # NIP-11: Detailed information about relay, free-form
+            description = "This is a super special strfry instance."
+
+            # NIP-11: Administrative nostr pubkey, for contact purposes
+            pubkey = ""
+
+            # NIP-11: Alternative administrative contact (email, website, etc)
+            contact = ""
+        }
+
+        # Maximum accepted incoming websocket frame size (should be larger than max event) (restart required)
+        maxWebsocketPayloadSize = 2097152 # 2 MiB
+
+        # Websocket-level PING message frequency (should be less than any reverse proxy idle timeouts) (restart required)
+        autoPingSeconds = 55
+
+        # If TCP keep-alive should be enabled (detect dropped connections to upstream reverse proxy)
+        enableTcpKeepalive = true
+
+        # How much uninterrupted CPU time a REQ query should get during its DB scan
+        queryTimesliceBudgetMicroseconds = 10000
+
+        # Maximum records that can be returned per filter
+        maxFilterLimit = 1000000000000000000
+
+        # Maximum number of subscriptions (concurrent REQs) a connection can have open at any time
+        maxSubsPerConnection = 10000
+
+        writePolicy {
+            # If non-empty, path to an executable script that implements the writePolicy plugin logic
+            plugin = ""
+        }
+
+        compression {
+            # Use permessage-deflate compression if supported by client. Reduces bandwidth, but slight increase in CPU (restart required)
+            enabled = true
+
+            # Maintain a sliding window buffer for each connection. Improves compression, but uses more memory (restart required)
+            slidingWindow = true
+        }
+
+        logging {
+            # Dump all incoming messages
+            dumpInAll = false
+
+            # Dump all incoming EVENT messages
+            dumpInEvents = false
+
+            # Dump all incoming REQ/CLOSE messages
+            dumpInReqs = false
+
+            # Log performance metrics for initial REQ database scans
+            dbScanPerf = false
+
+            # Log reason for invalid event rejection? Can be disabled to silence excessive logging
+            invalidEvents = false
+        }
+
+        numThreads {
+            # Ingester threads: route incoming requests, validate events/sigs (restart required)
+            ingester = 4
+
+            # reqWorker threads: Handle initial DB scan for events (restart required)
+            reqWorker = 4
+
+            # reqMonitor threads: Handle filtering of new events (restart required)
+            reqMonitor = 4
+
+            # negentropy threads: Handle negentropy protocol messages (restart required)
+            negentropy = 4
+        }
+
+        negentropy {
+            # Support negentropy protocol messages
+            enabled = true
+
+            # Maximum records that sync will process before returning an error
+            maxSyncEvents = 1000000000000000000
+        }
+    }
+
+  routerConf: |
+    ## editing this makes live changes
+    streams {
+
+      ## Stream down events from our friend relays
+      ## https://github.com/hoytech/strfry/blob/master/docs/router.md
+
+      onewaydown {
+        dir = "down"
+        filter = {"since":1750087551}
+        urls = [
+          # "wss://relay.nostr.band"
+          "wss://relay.damus.io"
+          # "wss://relay.primal.net"
+          # "wss://nos.lol"
+          #################################
+          ## "wss://filter.nostr.wine/npub1mznm66caya6rkvpfgj8zy0e83ps2lym44h923ldpkdc4t7scsytqx7ewwy?global=all"
+          #"wss://nostr.btczh.tw" ## taiwan
+          #"wss://relay.nostrcn.com" ## hong kong, china
+          #"wss://directory.yabu.me" ## japan
+          #"wss://relay.nostr.wirednet.jp"
+          #"wss://nostr.middling.mydns.jp"
+          ## "wss://nostr.okaits7534.net"
+          #"wss://nostr.psychoet.nexus" ## iceland
+          #"wss://relay.nsec.app" ## finland
+          ## "wss://he.relayable.org"
+          ## "wss://nostr.fbxl.net" ## canada
+          #"wss://nostr.sagaciousd.com"
+          #"wss://nostr.dakukitsune.ca"
+          #"wss://relay.hodl.ar" ## argentina
+          ## "wss://nostr.ser1.net" ## India
+          #"wss://nostrua.com" ## ukraine
+          #"wss://relay.notoshi.win" ## thailand
+          #"wss://relay.siamstr.com"
+          ### "wss://teemie1-relay.duckdns.org" ## too many errors
+          ## "wss://nostr.nebuu.la" ## singapore
+          #"wss://adre.su" ## russia
+          #"wss://nostr.gleeze.com" ## hungary
+          ### "wss://relay.hawties.xyz" ## bulgaria ## too many errors
+          #"wss://nostr.donky.social"
+          ## "wss://nostr.lnbitcoin.cz" ## cz
+          #"wss://btc.klendazu.com" ## spain
+          ## "wss://nostr.olwe.link" ## france
+          ## "wss://relay.urbanzap.space" ## england
+          #"wss://nostr.sidnlabs.nl" ## netherlands
+          #"wss://history.nostr.watch"
+          ## "wss://paid.no.str.cr" ## costa rica
+          ## "wss://relay.digitalezukunft.cyou" ## romania
+          #"wss://nostr.self-determined.de" ## germany
+          #"wss://nostr.cahlen.org" ## sweden
+          ## "wss://nostr.252.no" ## norway
+          ## "wss://relay.magiccity.live" ## florida
+          #"wss://nostr.notribe.net"
+          #"wss://nostr.8777.ch" ## new york
+          ## "wss://nostr.zenon.info" ## chicago
+          ## "wss://relay.pleb.to" ## LA
+          ## "wss://nostr.pklhome.net" ## memphis
+          #"wss://relay.westernbtc.com"
+          #"wss://relay.nsecbunker.com" ## special purpose
+          ## "wss://adult.18plus.social"
+          ### "wss://nostr.lnproxy.org" ## too many errors
+          #"wss://relay.nostrati.com"
+          ## "wss://relay.protest.net"
+          #"wss://nostrasia.casa"
+          #"wss://purplepag.es"  ## special purpose
+          #"wss://nostr.at"
+          #"wss://njump.me"
+          #"wss://relay.nostr.net"
+          #"wss://nostr.lopp.social"
+          #"wss://relay.shitforce.one"
+          #"wss://relay.nostr.bg"
+          #"wss://relay.poster.place"
+          ## "wss://r.mleku.net"
+          #"wss://relay.lumina.rocks"
+          ## "wss://relay.s-w.art"
+          ## "wss://brb.io"
+          #"wss://relay.mostr.pub"
+        ]
+      }
+    #   onewayup {
+    #       dir = "up"
+    #       filter = {"since":1711402834}
+    #        urls = [
+    #           "wss://filter.nostr.wine/npub1mznm66caya6rkvpfgj8zy0e83ps2lym44h923ldpkdc4t7scsytqx7ewwy?broadcast=true"
+    #       ]
+    #   }
+    }
+
 networkPolicy:
   enabled: true
+  db:
+    enabled: true
+    namespaceSelector:
+      matchLabels:
+        kubernetes.io/metadata.name: bitiq-local
+    ports:
+      - port: 8091
+        protocol: TCP
+      - port: 11210
+        protocol: TCP
+      - port: 18091
+        protocol: TCP
+      - port: 18096
+        protocol: TCP
 
 # Explicit FQDN for the OpenShift Route
 route:
