fix(strfry): allow router egress to upstream relays

--- a/charts/strfry/values-local.yaml
+++ b/charts/strfry/values-local.yaml
@@ -257,6 +257,24 @@ networkPolicy:
         protocol: TCP
       - port: 18096
         protocol: TCP
+  egress:
+    additional:
+      - to:
+          - ipBlock:
+              cidr: 0.0.0.0/0
+        ports:
+          - port: 80
+            protocol: TCP
+          - port: 443
+            protocol: TCP
+      - to:
+          - ipBlock:
+              cidr: ::/0
+        ports:
+          - port: 80
+            protocol: TCP
+          - port: 443
+            protocol: TCP
 
 # Explicit FQDN for the OpenShift Route
 route:
