--- a/charts/bootstrap-operators/templates/argocd-instance.yaml
+++ b/charts/bootstrap-operators/templates/argocd-instance.yaml
@@ -8,4 +8,8 @@ spec:
   server:
     route:
       enabled: {{ .Values.argoInstance.routeEnabled }}
+{{ with .Values.argoInstance.extraConfig }}
+  extraConfig:
+{{ toYaml . | indent 4 }}
+{{- end }}
 {{- end }}
