fix(strfry): allow dns egress

--- a/charts/strfry/values-local.yaml
+++ b/charts/strfry/values-local.yaml
@@ -198,6 +198,15 @@ networkPolicy:
   egress:
     additional:
       - to:
+          - namespaceSelector:
+              matchLabels:
+                kubernetes.io/metadata.name: openshift-dns
+        ports:
+          - port: 53
+            protocol: UDP
+          - port: 53
+            protocol: TCP
+      - to:
           - ipBlock:
               cidr: 0.0.0.0/0
         ports:
