fix(strfry): allow cluster-dns egress

--- a/charts/strfry/values-local.yaml
+++ b/charts/strfry/values-local.yaml
@@ -208,6 +208,14 @@ networkPolicy:
             protocol: TCP
       - to:
           - ipBlock:
+              cidr: 10.217.0.0/16
+        ports:
+          - port: 53
+            protocol: UDP
+          - port: 53
+            protocol: TCP
+      - to:
+          - ipBlock:
               cidr: 0.0.0.0/0
         ports:
           - port: 80
