feat(strfry): allow custom dns policy

--- a/charts/strfry/templates/statefulset.yaml
+++ b/charts/strfry/templates/statefulset.yaml
@@ -13,6 +13,13 @@ spec:
       labels:
         app: strfry
     spec:
+      {{- if .Values.dnsPolicy }}
+      dnsPolicy: {{ .Values.dnsPolicy }}
+      {{- end }}
+      {{- if .Values.dnsConfig }}
+      dnsConfig:
+{{ toYaml .Values.dnsConfig | indent 8 }}
+      {{- end }}
       automountServiceAccountToken: false
       securityContext:
         seccompProfile:
