--- a/charts/strfry/values-local.yaml
+++ b/charts/strfry/values-local.yaml
@@ -12,6 +12,12 @@ persistence:
   size: 10Gi
   storageClassName: ""
 
+dnsPolicy: None
+dnsConfig:
+  nameservers:
+    - 1.1.1.1
+    - 8.8.8.8
+
 config:
   strfryConf: |
     ##
