--- a/charts/vault-runtime/templates/20-secrets-app.yaml
+++ b/charts/vault-runtime/templates/20-secrets-app.yaml
@@ -66,3 +66,25 @@ spec:
   vaultAuthRef: k8s
 {{- end }}
 {{- end }}
+
+{{- if .Values.enabled }}
+{{- $nq := .Values.secrets.nostrQuery -}}
+{{- if $nq.enabled }}
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: {{ $nq.destinationName }}
+  namespace: {{ .Values.namespaces.app }}
+spec:
+  mount: gitops
+  type: kv-v2
+  path: {{ $nq.path }}
+  destination:
+    create: true
+    overwrite: true
+    name: {{ $nq.destinationName }}
+    type: {{ $nq.type | default "Opaque" }}
+  vaultAuthRef: k8s
+{{- end }}
+{{- end }}
