--- a/charts/nostr-thread-copier/templates/networkpolicy.yaml
+++ b/charts/nostr-thread-copier/templates/networkpolicy.yaml
@@ -53,7 +53,11 @@ spec:
 {{- $hasEgress := false }}
 {{- if .Values.networkPolicy.egress.allowDNS }}
 {{- $hasEgress = true }}
-    - ports:
+    - to:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: openshift-dns
+      ports:
         - protocol: UDP
           port: 53
         - protocol: TCP
