fix(strfry): allow nostouch ingress
Grant the strfry network policy ingress from pods labelled
app.kubernetes.io/name=nostouch so the nostouch streamer can dial the
local relay websocket. Without this allowance, nostouch pods failed to
connect in the bitiq-local namespace.

--- a/charts/strfry/values-common.yaml
+++ b/charts/strfry/values-common.yaml
@@ -56,7 +56,11 @@ networkPolicy:
   ingress:
     allowOpenShiftIngress: true
     # Additional ingress rules (list of objects containing namespaceSelector / podSelector / ipBlock)
-    additional: []
+    additional:
+      # Allow in-namespace clients such as nostouch to reach the relay
+      - podSelector:
+          matchLabels:
+            app.kubernetes.io/name: nostouch
   db:
     enabled: false
     # Optional namespaceSelector override for DB destination
