chore(bootstrap-operators): increase argocd controller memory
Raise the openshift-gitops application-controller resource requests and
limits so the controller stops getting OOMKilled while reconciling the
stack. The chart now exposes the ArgoCD spec directly, taking the server
route and controller overrides from values for easier tuning.

--- a/charts/bootstrap-operators/templates/argocd-instance.yaml
+++ b/charts/bootstrap-operators/templates/argocd-instance.yaml
@@ -5,11 +5,7 @@ metadata:
   name: {{ .Values.argoInstance.name }}
   namespace: {{ .Values.argoInstance.namespace }}
 spec:
-  server:
-    route:
-      enabled: {{ .Values.argoInstance.routeEnabled }}
-{{ with .Values.argoInstance.extraConfig }}
-  extraConfig:
-{{ toYaml . | indent 4 }}
+{{- with .Values.argoInstance.spec }}
+{{ toYaml . | indent 2 }}
 {{- end }}
 {{- end }}
