--- a/charts/nostouch/templates/networkpolicy.yaml
+++ b/charts/nostouch/templates/networkpolicy.yaml
@@ -59,10 +59,12 @@ spec:
             matchLabels:
               kubernetes.io/metadata.name: openshift-dns
       ports:
+{{- range $dnsPort := (list 53 5353) }}
         - protocol: UDP
-          port: 53
+          port: {{ $dnsPort }}
         - protocol: TCP
-          port: 53
+          port: {{ $dnsPort }}
+{{- end }}
 {{- end }}
 {{- if .Values.networkPolicy.egress.allowSameNamespace }}
 {{- $hasEgress = true }}
