--- a/charts/bitiq-umbrella/templates/app-nostr-threads.yaml
+++ b/charts/bitiq-umbrella/templates/app-nostr-threads.yaml
@@ -1,12 +1,42 @@
 {{- if .Values.nostrThreads.enabled }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
+{{- $nostrThreadsCfg := default (dict) (get .Values.imageUpdater "nostrThreads") }}
+{{- $nostrThreadsEnabled := true }}
+{{- if hasKey $nostrThreadsCfg "enabled" }}
+  {{- $nostrThreadsEnabled = eq (lower (printf "%v" (get $nostrThreadsCfg "enabled"))) "true" }}
+{{- end }}
+{{- $nostrThreadsPaused := false }}
+{{- if hasKey $nostrThreadsCfg "pause" }}
+  {{- $nostrThreadsPaused = eq (lower (printf "%v" (get $nostrThreadsCfg "pause"))) "true" }}
+{{- end }}
+{{- $manageNostrThreads := and $nostrThreadsEnabled (not $nostrThreadsPaused) }}
+{{- $nostrThreadsRepo := default "" (get .Values.sampleAppImages "nostrThreads") }}
 metadata:
   name: nostr-threads-{{ .Values.env }}
   namespace: {{ .Values.gitopsNamespace }}
   labels:
     bitiq.io/env: {{ .Values.env }}
     app.kubernetes.io/part-of: bitiq-umbrella
+  {{- if $manageNostrThreads }}
+  annotations:
+    {{- if $nostrThreadsRepo }}
+    argocd-image-updater.argoproj.io/image-list: nostr-threads={{ $nostrThreadsRepo }}
+    {{- end }}
+    argocd-image-updater.argoproj.io/nostr-threads.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/nostr-threads.platforms: {{ .Values.imageUpdater.platforms | default "linux/amd64" }}
+    {{- if .Values.imageUpdater.pullSecret }}
+    argocd-image-updater.argoproj.io/nostr-threads.pull-secret: {{ .Values.imageUpdater.pullSecret | quote }}
+    {{- end }}
+    argocd-image-updater.argoproj.io/nostr-threads.helm.image-name: image.repository
+    argocd-image-updater.argoproj.io/nostr-threads.helm.image-tag: image.tag
+    argocd-image-updater.argoproj.io/nostr-threads.allow-tags: "regexp:^v\\d+\\.\\d+\\.\\d+-commit\\.[0-9a-f]{7,}$"
+    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/write-back-target: helmvalues:/charts/nostr-threads/values-{{ .Values.env }}.yaml
+    argocd-image-updater.argoproj.io/git-branch: {{ .Values.targetRevision }}
+    argocd-image-updater.argoproj.io/dry-run: "false"
+    argocd-image-updater.argoproj.io/interval: 1m
+  {{- end }}
 spec:
   project: default
   source:
