--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -24,6 +24,9 @@ imageUpdater:
     pause: false
   toyWeb:
     pause: false
+  nostrThreads:
+    enabled: true
+    pause: false
 
 # Vault operators integration (disabled by default until migration completes)
 vault:
@@ -46,6 +49,7 @@ vault:
 sampleAppImages:
   toyService: quay.io/paulcapestany/toy-service
   toyWeb: quay.io/paulcapestany/toy-web
+  nostrThreads: quay.io/paulcapestany/nostr_threads
 
 # New services (env toggles)
 strfry:
@@ -117,6 +121,23 @@ ciPipelines:
       repoFullNames:
         - PaulCapestany/toy-service
         - bitiq-io/toy-service
+      runTests: "true"
+      testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
+      testScript: |
+        go test ./...
+      eventTypes: ["push"]
+    - name: nostr-threads-build-and-push
+      gitUrl: https://github.com/PaulCapestany/nostr_threads.git
+      gitRevision: main
+      dockerfile: Dockerfile
+      contextDir: .
+      imageRegistry: quay.io
+      imageNamespace: paulcapestany
+      imageName: nostr_threads
+      tlsVerify: "true"
+      repoFullNames:
+        - PaulCapestany/nostr_threads
+        - bitiq-io/nostr_threads
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
       testScript: |
