--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -21,6 +21,9 @@ imageUpdater:
     pause: false
   toyWeb:
     pause: false
+  nostrThreads:
+    enabled: true
+    pause: false
 
 vault:
   runtime:
@@ -31,6 +34,7 @@ vault:
 sampleAppImages:
   toyService: quay.io/paulcapestany/toy-service
   toyWeb: quay.io/paulcapestany/toy-web
+  nostrThreads: quay.io/paulcapestany/nostr_threads
 
 # New services (env toggles used by templates)
 strfry:
@@ -89,6 +93,22 @@ ciPipelines:
       # Accept either personal or org repo full name
       repoFullNames:
         - PaulCapestany/toy-service
+      runTests: "true"
+      testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
+      testScript: |
+        go test ./...
+      eventTypes: ["push"]
+    - name: nostr-threads-build-and-push
+      gitUrl: https://github.com/PaulCapestany/nostr_threads.git
+      gitRevision: main
+      dockerfile: Dockerfile
+      contextDir: .
+      imageRegistry: quay.io
+      imageNamespace: paulcapestany
+      imageName: nostr_threads
+      tlsVerify: "true"
+      repoFullNames:
+        - PaulCapestany/nostr_threads
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
       testScript: |
