--- a/charts/ci-pipelines/tests/trigger_bindings_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_bindings_test.yaml
@@ -19,11 +19,31 @@ tests:
       - equal:
           path: spec.params[1].name
           value: git-revision
-  - it: renders TriggerBinding for frontend pipeline (toy-web)
+  - it: renders TriggerBinding for nostr_threads pipeline
     documentIndex: 1
     asserts:
       - isKind:
           of: TriggerBinding
       - equal:
           path: metadata.name
+          value: nostr-threads-build-and-push-binding
+      - equal:
+          path: spec.params[0].name
+          value: git-repo-url
+      - equal:
+          path: spec.params[1].name
+          value: git-revision
+  - it: renders TriggerBinding for frontend pipeline (toy-web)
+    documentIndex: 2
+    asserts:
+      - isKind:
+          of: TriggerBinding
+      - equal:
+          path: metadata.name
           value: bitiq-web-build-and-push-binding
+      - equal:
+          path: spec.params[0].name
+          value: git-repo-url
+      - equal:
+          path: spec.params[1].name
+          value: git-revision
