--- a/charts/ci-pipelines/tests/trigger_templates_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_templates_test.yaml
@@ -13,8 +13,16 @@ tests:
       - equal:
           path: metadata.name
           value: bitiq-build-and-push-template
-  - it: renders TriggerTemplate for frontend pipeline (toy-web)
+  - it: renders TriggerTemplate for nostr_threads pipeline
     documentIndex: 1
+    asserts:
+      - isKind:
+          of: TriggerTemplate
+      - equal:
+          path: metadata.name
+          value: nostr-threads-build-and-push-template
+  - it: renders TriggerTemplate for frontend pipeline (toy-web)
+    documentIndex: 2
     asserts:
       - isKind:
           of: TriggerTemplate
