--- a/charts/nostr-threads/templates/networkpolicy.yaml
+++ b/charts/nostr-threads/templates/networkpolicy.yaml
@@ -58,10 +58,12 @@ spec:
             matchLabels:
               kubernetes.io/metadata.name: openshift-dns
       ports:
+{{- range $dnsPort := (list 53 5353) }}
         - protocol: UDP
-          port: 53
+          port: {{ $dnsPort }}
         - protocol: TCP
-          port: 53
+          port: {{ $dnsPort }}
+{{- end }}
 {{- end }}
 {{- if .Values.networkPolicy.egress.allowSameNamespace }}
 {{- $hasEgress = true }}
