--- a/charts/nostr-threads/values-common.yaml
+++ b/charts/nostr-threads/values-common.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/paulcapestany/nostr_threads
-  tag: latest
+  tag: v0.1.1-commit.55dcef3
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
