--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -27,6 +27,9 @@ imageUpdater:
   nostrThreads:
     enabled: true
     pause: false
+  nostouch:
+    enabled: true
+    pause: false
 
 # Vault operators integration (disabled by default until migration completes)
 vault:
@@ -50,6 +53,7 @@ sampleAppImages:
   toyService: quay.io/paulcapestany/toy-service
   toyWeb: quay.io/paulcapestany/toy-web
   nostrThreads: quay.io/paulcapestany/nostr_threads
+  nostouch: quay.io/paulcapestany/nostouch
 
 # New services (env toggles)
 strfry:
@@ -138,6 +142,23 @@ ciPipelines:
       repoFullNames:
         - PaulCapestany/nostr_threads
         - bitiq-io/nostr_threads
+      runTests: "true"
+      testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
+      testScript: |
+        go test ./...
+      eventTypes: ["push"]
+    - name: nostouch-build-and-push
+      gitUrl: https://github.com/PaulCapestany/nostouch.git
+      gitRevision: main
+      dockerfile: Dockerfile
+      contextDir: .
+      imageRegistry: quay.io
+      imageNamespace: paulcapestany
+      imageName: nostouch
+      tlsVerify: "true"
+      repoFullNames:
+        - PaulCapestany/nostouch
+        - bitiq-io/nostouch
       runTests: "true"
       testImage: registry.access.redhat.com/ubi9/go-toolset:1.20
       testScript: |
