--- a/charts/ci-pipelines/tests/trigger_bindings_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_bindings_test.yaml
@@ -33,8 +33,22 @@ tests:
       - equal:
           path: spec.params[1].name
           value: git-revision
-  - it: renders TriggerBinding for frontend pipeline (toy-web)
+  - it: renders TriggerBinding for nostouch pipeline
     documentIndex: 2
+    asserts:
+      - isKind:
+          of: TriggerBinding
+      - equal:
+          path: metadata.name
+          value: nostouch-build-and-push-binding
+      - equal:
+          path: spec.params[0].name
+          value: git-repo-url
+      - equal:
+          path: spec.params[1].name
+          value: git-revision
+  - it: renders TriggerBinding for frontend pipeline (toy-web)
+    documentIndex: 3
     asserts:
       - isKind:
           of: TriggerBinding
