fix(ci): ensure workspace pvc writable via fsGroup

--- a/charts/bitiq-umbrella/values.yaml
+++ b/charts/bitiq-umbrella/values.yaml
@@ -79,7 +79,7 @@ bootstrapOperators:
 
 ciPipelines:
   serviceAccountName: pipeline
-  fsGroup: ""
+  fsGroup: 65532
   eventListener:
     name: bitiq-listener
     githubSecretName: github-webhook-secret
