--- a/charts/bitiq-umbrella/values-common.yaml
+++ b/charts/bitiq-umbrella/values-common.yaml
@@ -104,7 +104,7 @@ bootstrapOperators:
 ciPipelines:
   serviceAccountName: pipeline
   # Optional fsGroup override for Tekton TaskRuns; empty uses SCC defaults
-  fsGroup: ""
+  fsGroup: 65532
   eventListener:
     name: bitiq-listener
     githubSecretName: github-webhook-secret
