--- a/charts/ci-pipelines/values.yaml
+++ b/charts/ci-pipelines/values.yaml
@@ -11,7 +11,7 @@ serviceAccountName: ci-pipeline
 # Registry auth Secret to link to the service account (kubernetes.io/dockerconfigjson)
 registrySecretName: quay-auth
 # Optional fsGroup override; leave empty to use cluster SCC defaults
-fsGroup: ""
+fsGroup: 65532
 
 # Control creation of Namespace resources that match pipeline imageNamespace values
 createImageNamespaces: false
