--- a/charts/ci-pipelines/tests/trigger_templates_test.yaml
+++ b/charts/ci-pipelines/tests/trigger_templates_test.yaml
@@ -13,6 +13,9 @@ tests:
       - equal:
           path: metadata.name
           value: bitiq-build-and-push-template
+      - equal:
+          path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
+          value: 1.00069e+09
   - it: renders TriggerTemplate for nostr_threads pipeline
     documentIndex: 1
     asserts:
@@ -21,6 +24,9 @@ tests:
       - equal:
           path: metadata.name
           value: nostr-threads-build-and-push-template
+      - equal:
+          path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
+          value: 1.00069e+09
   - it: renders TriggerTemplate for nostouch pipeline
     documentIndex: 2
     asserts:
@@ -29,6 +35,9 @@ tests:
       - equal:
           path: metadata.name
           value: nostouch-build-and-push-template
+      - equal:
+          path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
+          value: 1.00069e+09
   - it: renders TriggerTemplate for frontend pipeline (toy-web)
     documentIndex: 3
     asserts:
@@ -37,3 +46,6 @@ tests:
       - equal:
           path: metadata.name
           value: bitiq-web-build-and-push-template
+      - equal:
+          path: spec.resourcetemplates[0].spec.taskRunTemplate.podTemplate.securityContext.fsGroup
+          value: 1.00069e+09
